--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:vsc-extension-for-browsing-progress-db.proBroBonjour"
+        "onCommand:vsc-extension-for-browsing-progress-db.proBroBonjour",
+		"onCommand:vsc-extension-for-browsing-progress-db.connect"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
 				"command": "vsc-extension-for-browsing-progress-db.proBroBonjour",
-				"title": "ProBro bonjour"
+				"title": "ProBro.bonjour",
+				"category": "ProBro"
+			},
+			{
+				"command": "vsc-extension-for-browsing-progress-db.connect",
+				"title": "ProBro.connect",
+				"category": "ProBro"
 			}
 		]
 	},
