--- a/package.json
+++ b/package.json
@@ -143,7 +143,10 @@
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "faker": "^5.5.3",
         "react": "^18.1.0",
-        "react-dom": "^18.1.0"
+        "react-data-grid": "^7.0.0-beta.13",
+        "react-dom": "^18.1.0",
+        "react-table": "^7.8.0"
     }
 }
