added remaining field columns and placed in seperate json file

--- a/src/view/tsconfig.json
+++ b/src/view/tsconfig.json
@@ -11,7 +11,8 @@
         "noUnusedLocals": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "resolveJsonModule": true
     },
     "exclude": ["node_modules"]
 }
