--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vsc-extension-for-browsing-progress-db",
+    "name": "pro-bro",
     "displayName": "ProBro",
     "description": "VSC extension for browsing Progress DB",
     "version": "0.0.1",
@@ -10,64 +10,64 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:vsc-extension-for-browsing-progress-db.proBroBonjour",
-        "onCommand:vsc-extension-for-browsing-progress-db.connect",
-        "onView:vsc-extension-for-browsing-progress-db-databases",
-        "onView:vsc-extension-for-browsing-progress-db-tables",
-        "onView:vsc-extension-for-browsing-progress-db-fields",
-        "onView:vsc-extension-for-browsing-progress-db-indexes"
+        "onCommand:pro-bro.proBroBonjour",
+        "onCommand:pro-bro.connect",
+        "onView:pro-bro-databases",
+        "onView:pro-bro-tables",
+        "onView:pro-bro-fields",
+        "onView:pro-bro-indexes"
     ],
     "main": "./out/extension.js",
     "contributes": {
         "viewsContainers": {
             "activitybar": [
                 {
-                    "id": "vsc-extension-for-browsing-progress-db",
+                    "id": "pro-bro",
                     "title": "OpenEdge Explorer",
                     "icon": "resources/redshift.svg"
                 }
             ],
             "panel": [
                 {
-                    "id": "vsc-extension-for-browsing-progress-db-fields",
+                    "id": "pro-bro-fields",
                     "title": "Fields Explorer",
                     "icon": "resources/redshift.svg"
                 },
                 {
-                    "id": "vsc-extension-for-browsing-progress-db-indexes",
+                    "id": "pro-bro-indexes",
                     "title": "Indexes Explorer",
                     "icon": "resources/redshift.svg"
                 }
             ]
         },
         "views": {
-            "vsc-extension-for-browsing-progress-db-fields": [
+            "pro-bro-fields": [
                 {
                     "type": "webview",
-                    "id": "vsc-extension-for-browsing-progress-db-fields",
+                    "id": "pro-bro-fields",
                     "name": "",
                     "contextualTitle": "Fields Explorer",
                     "title": "Fields Explorer"
                 }
             ],
-            "vsc-extension-for-browsing-progress-db-indexes": [
+            "pro-bro-indexes": [
                 {
                     "type": "webview",
-                    "id": "vsc-extension-for-browsing-progress-db-indexes",
+                    "id": "pro-bro-indexes",
                     "name": "",
                     "contextualTitle": "Indexes Explorer",
                     "title": "Indexes Explorer"
                 }
             ],
-            "vsc-extension-for-browsing-progress-db": [
+            "pro-bro": [
                 {
-                    "id": "vsc-extension-for-browsing-progress-db-databases",
+                    "id": "pro-bro-databases",
                     "name": "DataBases",
                     "contextualTitle": "OpenEdge Explorer",
                     "title": "OpenEdge Explorer"
                 },
                 {
-                    "id": "vsc-extension-for-browsing-progress-db-tables",
+                    "id": "pro-bro-tables",
                     "name": "Tables",
                     "contextualTitle": "Tables",
                     "title": "Tables"
@@ -76,52 +76,49 @@
         },
         "commands": [
             {
-                "command": "vsc-extension-for-browsing-progress-db.refreshList",
-                "title": "Refresh"
+                "command": "pro-bro.refreshList",
+                "title": "Refresh",
+                "icon": "$(refresh)"
             },
             {
-                "command": "vsc-extension-for-browsing-progress-db.addEntry",
-                "title": "Add"
+                "command": "pro-bro.addEntry",
+                "title": "Add",
+                "icon": "$(add)"
             },
             {
-                "command": "vsc-extension-for-browsing-progress-db.editEntry",
-                "title": "Edit"
+                "command": "pro-bro.deleteConnection",
+                "title": "Delete connection",
+                "icon": "$(trash)"
             },
             {
-                "command": "vsc-extension-for-browsing-progress-db.deleteEntry",
-                "title": "Delete"
-            },
-            {
-                "command": "vsc-extension-for-browsing-progress-db.query",
-                "title": "Query"
+                "command": "pro-bro.query",
+                "title": "Query",
+                "icon": "$(play)"
             }
         ],
         "menus": {
             "view/title": [
                 {
-                    "command": "vsc-extension-for-browsing-progress-db.refreshList",
-                    "when": "view == vsc-extension-for-browsing-progress-db-databases",
+                    "command": "pro-bro.refreshList",
+                    "when": "view == pro-bro-databases",
                     "group": "navigation"
                 },
                 {
-                    "command": "vsc-extension-for-browsing-progress-db.addEntry",
-                    "when": "view == vsc-extension-for-browsing-progress-db-databases",
+                    "command": "pro-bro.addEntry",
+                    "when": "view == pro-bro-databases",
                     "group": "navigation"
+                }
+            ],
+            "view/item/context": [
+                {
+                    "command": "pro-bro.deleteConnection",
+                    "when": "view == pro-bro-databases && viewItem == dbConnection",
+                    "group": "inline"
                 },
                 {
-                    "command": "vsc-extension-for-browsing-progress-db.editEntry",
-                    "when": "view == vsc-extension-for-browsing-progress-db",
-                    "group": "navigation"
-                },
-                {
-                    "command": "vsc-extension-for-browsing-progress-db.deleteEntry",
-                    "when": "view == vsc-extension-for-browsing-progress-db",
-                    "group": "navigation"
-                },
-                {
-                    "command": "vsc-extension-for-browsing-progress-db.query",
-                    "when": "view == vsc-extension-for-browsing-progress-db-tables",
-                    "group": "navigation"
+                    "command": "pro-bro.query",
+                    "when": "view == pro-bro-tables",
+                    "group": "inline"
                 }
             ]
         }
