--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pro-bro",
+    "name": "vsc-extension-for-browsing-progress-db",
     "displayName": "ProBro",
     "description": "VSC extension for browsing Progress DB",
     "version": "0.0.1",
@@ -10,64 +10,64 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:pro-bro.proBroBonjour",
-        "onCommand:pro-bro.connect",
-        "onView:pro-bro-databases",
-        "onView:pro-bro-tables",
-        "onView:pro-bro-fields",
-        "onView:pro-bro-indexes"
+        "onCommand:vsc-extension-for-browsing-progress-db.proBroBonjour",
+        "onCommand:vsc-extension-for-browsing-progress-db.connect",
+        "onView:vsc-extension-for-browsing-progress-db-databases",
+        "onView:vsc-extension-for-browsing-progress-db-tables",
+        "onView:vsc-extension-for-browsing-progress-db-fields",
+        "onView:vsc-extension-for-browsing-progress-db-indexes"
     ],
     "main": "./out/extension.js",
     "contributes": {
         "viewsContainers": {
             "activitybar": [
                 {
-                    "id": "pro-bro",
+                    "id": "vsc-extension-for-browsing-progress-db",
                     "title": "OpenEdge Explorer",
                     "icon": "resources/redshift.svg"
                 }
             ],
             "panel": [
                 {
-                    "id": "pro-bro-fields",
+                    "id": "vsc-extension-for-browsing-progress-db-fields",
                     "title": "Fields Explorer",
                     "icon": "resources/redshift.svg"
                 },
                 {
-                    "id": "pro-bro-indexes",
+                    "id": "vsc-extension-for-browsing-progress-db-indexes",
                     "title": "Indexes Explorer",
                     "icon": "resources/redshift.svg"
                 }
             ]
         },
         "views": {
-            "pro-bro-fields": [
+            "vsc-extension-for-browsing-progress-db-fields": [
                 {
                     "type": "webview",
-                    "id": "pro-bro-fields",
+                    "id": "vsc-extension-for-browsing-progress-db-fields",
                     "name": "",
                     "contextualTitle": "Fields Explorer",
                     "title": "Fields Explorer"
                 }
             ],
-            "pro-bro-indexes": [
+            "vsc-extension-for-browsing-progress-db-indexes": [
                 {
                     "type": "webview",
-                    "id": "pro-bro-indexes",
+                    "id": "vsc-extension-for-browsing-progress-db-indexes",
                     "name": "",
                     "contextualTitle": "Indexes Explorer",
                     "title": "Indexes Explorer"
                 }
             ],
-            "pro-bro": [
+            "vsc-extension-for-browsing-progress-db": [
                 {
-                    "id": "pro-bro-databases",
+                    "id": "vsc-extension-for-browsing-progress-db-databases",
                     "name": "DataBases",
                     "contextualTitle": "OpenEdge Explorer",
                     "title": "OpenEdge Explorer"
                 },
                 {
-                    "id": "pro-bro-tables",
+                    "id": "vsc-extension-for-browsing-progress-db-tables",
                     "name": "Tables",
                     "contextualTitle": "Tables",
                     "title": "Tables"
@@ -76,49 +76,52 @@
         },
         "commands": [
             {
-                "command": "pro-bro.refreshList",
-                "title": "Refresh",
-                "icon": "$(refresh)"
+                "command": "vsc-extension-for-browsing-progress-db.refreshList",
+                "title": "Refresh"
             },
             {
-                "command": "pro-bro.addEntry",
-                "title": "Add",
-                "icon": "$(add)"
+                "command": "vsc-extension-for-browsing-progress-db.addEntry",
+                "title": "Add"
             },
             {
-                "command": "pro-bro.deleteConnection",
-                "title": "Delete connection",
-                "icon": "$(trash)"
+                "command": "vsc-extension-for-browsing-progress-db.editEntry",
+                "title": "Edit"
             },
             {
-                "command": "pro-bro.query",
-                "title": "Query",
-                "icon": "$(play)"
+                "command": "vsc-extension-for-browsing-progress-db.deleteEntry",
+                "title": "Delete"
+            },
+            {
+                "command": "vsc-extension-for-browsing-progress-db.query",
+                "title": "Query"
             }
         ],
         "menus": {
             "view/title": [
                 {
-                    "command": "pro-bro.refreshList",
-                    "when": "view == pro-bro-databases",
+                    "command": "vsc-extension-for-browsing-progress-db.refreshList",
+                    "when": "view == vsc-extension-for-browsing-progress-db-databases",
                     "group": "navigation"
                 },
                 {
-                    "command": "pro-bro.addEntry",
-                    "when": "view == pro-bro-databases",
+                    "command": "vsc-extension-for-browsing-progress-db.addEntry",
+                    "when": "view == vsc-extension-for-browsing-progress-db-databases",
                     "group": "navigation"
-                }
-            ],
-            "view/item/context": [
-                {
-                    "command": "pro-bro.deleteConnection",
-                    "when": "view == pro-bro-databases && viewItem == dbConnection",
-                    "group": "inline"
                 },
                 {
-                    "command": "pro-bro.query",
-                    "when": "view == pro-bro-tables",
-                    "group": "inline"
+                    "command": "vsc-extension-for-browsing-progress-db.editEntry",
+                    "when": "view == vsc-extension-for-browsing-progress-db",
+                    "group": "navigation"
+                },
+                {
+                    "command": "vsc-extension-for-browsing-progress-db.deleteEntry",
+                    "when": "view == vsc-extension-for-browsing-progress-db",
+                    "group": "navigation"
+                },
+                {
+                    "command": "vsc-extension-for-browsing-progress-db.query",
+                    "when": "view == vsc-extension-for-browsing-progress-db-tables",
+                    "group": "navigation"
                 }
             ]
         }
