--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "pro-bro",
     "displayName": "ProBro",
     "description": "VSC extension for browsing Progress DB",
-    "version": "0.0.1",
+    "version": "0.3.0",
+    "publisher": "BalticAmadeus",
     "engines": {
         "vscode": "^1.67.0"
     },
@@ -11,6 +12,9 @@
     "galleryBanner": {
       "color": "#248bfa",
       "theme": "dark"
+    },
+    "scripts": {
+        "vscode:prepublish": "tsc"
     },
     "activationEvents": [
         "onCommand:pro-bro.proBroBonjour",
@@ -167,7 +171,6 @@
         "style-loader": "^3.3.1",
         "ts-loader": "^9.3.0",
         "typescript": "^4.6.4",
-        "uuid": "^8.3.2",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.9.2"
     },
@@ -179,6 +182,7 @@
         "react-data-grid": "^7.0.0-beta.13",
         "react-dom": "^18.1.0",
         "react-table": "^7.8.0",
-        "reactjs-popup": "^2.0.5"
+        "reactjs-popup": "^2.0.5",
+        "uuid": "^8.3.2"
     }
 }
