--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "pro-bro",
     "displayName": "ProBro",
     "description": "VSC extension for browsing Progress DB",
-    "version": "0.3.0",
+    "version": "0.3.1",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/BalticAmadeus/ProBro"
+    },
     "publisher": "BalticAmadeus",
     "engines": {
         "vscode": "^1.67.0"
@@ -12,9 +16,6 @@
     "galleryBanner": {
       "color": "#248bfa",
       "theme": "dark"
-    },
-    "scripts": {
-        "vscode:prepublish": "tsc"
     },
     "activationEvents": [
         "onCommand:pro-bro.proBroBonjour",
