--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "engines": {
         "vscode": "^1.67.0"
     },
-    "categories": ["Other"],
+    "categories": [
+        "Other"
+    ],
     "icon": "resources/pB_logo.png",
     "galleryBanner": {
-      "color": "#248bfa",
-      "theme": "dark"
+        "color": "#248bfa",
+        "theme": "dark"
     },
     "activationEvents": [
         "onCommand:pro-bro.proBroBonjour",
@@ -108,7 +110,6 @@
                 "title": "List-filter",
                 "icon": "$(list-filter)"
             }
-
         ],
         "menus": {
             "view/title": [
@@ -127,7 +128,6 @@
                     "when": "view == pro-bro-tables",
                     "group": "navigation"
                 }
-
             ],
             "view/item/context": [
                 {
@@ -176,6 +176,10 @@
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@mui/icons-material": "^5.10.2",
+        "@mui/material": "^5.10.2",
         "bootstrap": "^5.2.0",
         "export-from-json": "^1.6.0",
         "faker": "^5.5.3",
