Updated info for 0.4.0 release

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "pro-bro",
     "displayName": "ProBro",
-    "description": "VSC extension for browsing Progress DB",
+    "description": "VSC extension for browsing Progress OpenEdge DB",
     "version": "0.3.1",
     "repository": {
         "type": "git",
