Added bundling and ignore for node_modules

--- a/package.json
+++ b/package.json
@@ -157,7 +157,11 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
+        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+        "esbuild": "npm run esbuild-base -- --sourcemap",
+        "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+        "test-compile": "tsc -p ./",
         "compile": "npm-run-all compile:*",
         "watch": "npm-run-all -p watch:*",
         "compile:extension": "tsc -p ./",
