--- a/package.json
+++ b/package.json
@@ -176,7 +176,6 @@
         "@types/node": "14.x",
         "@types/react": "^18.0.12",
         "@types/react-dom": "^18.0.5",
-        "@types/uuid": "^8.3.4",
         "@types/vscode": "^1.67.0",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
@@ -204,7 +203,6 @@
         "react-data-grid": "^7.0.0-beta.13",
         "react-dom": "^18.1.0",
         "react-table": "^7.8.0",
-        "reactjs-popup": "^2.0.5",
-        "uuid": "^8.3.2"
+        "reactjs-popup": "^2.0.5"
     }
 }
