--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
     "name": "pro-bro",
     "displayName": "ProBro",
-    "description": "VSC extension for browsing Progress OpenEdge DB",
-    "version": "1.1.0",
+    "description": "VS Code extension for browsing Progress OpenEdge DataBases",
+    "keywords": [
+        "OpenEdge",
+        "Progress",
+        "DataBase",
+        "DB",
+        "Explorer"
+    ],
+    "version": "1.2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/BalticAmadeus/ProBro"
@@ -12,6 +19,8 @@
         "vscode": "^1.67.0"
     },
     "categories": [
+        "Programming Languages",
+        "Visualization",
         "Other"
     ],
     "icon": "resources/pB_logo.png",
@@ -31,7 +40,7 @@
         "configuration": {
             "title": "ProBro",
             "properties": {
-                "ProBro.batchSize":{
+                "ProBro.batchSize": {
                     "type": "number",
                     "minimum": 100,
                     "default": 1000,
@@ -50,7 +59,6 @@
                     "markdownDescription": "Specifies the initial number of records retrieved when query is opened"
                 }
             }
-
         },
         "viewsContainers": {
             "activitybar": [
@@ -221,6 +229,7 @@
         "@mui/icons-material": "^5.10.2",
         "@mui/material": "^5.10.2",
         "bootstrap": "^5.2.0",
+        "esbuild": "^0.17.5",
         "export-from-json": "^1.6.0",
         "faker": "^5.5.3",
         "react": "^18.1.0",
