--- a/package.json
+++ b/package.json
@@ -200,9 +200,14 @@
         "compile:views": "webpack --mode development",
         "watch:extension": "tsc -watch -p ./",
         "watch:views": "webpack --watch --mode development",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "npm run compile && node ./node_modules/vscode/bin/test",
+        "jestTest": "jest"
     },
     "devDependencies": {
+        "@babel/core": "^7.20.12",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.18.6",
+        "@jest/globals": "^29.4.2",
         "@types/glob": "^7.2.0",
         "@types/mocha": "^9.1.1",
         "@types/node": "14.x",
@@ -212,12 +217,15 @@
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
         "@vscode/test-electron": "^2.1.3",
+        "babel-jest": "^29.4.2",
         "css-loader": "^6.7.1",
         "eslint": "^8.14.0",
         "glob": "^8.0.1",
+        "jest": "^29.4.2",
         "mocha": "^9.2.2",
         "npm-run-all": "^4.1.5",
         "style-loader": "^3.3.1",
+        "ts-jest": "^29.0.5",
         "ts-loader": "^9.3.0",
         "typescript": "^4.6.4",
         "webpack": "^5.73.0",
