--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
         cache: 'npm'
     # - run: npm install @emotion/react
     - run: npm install
-    - run: npm run build --if-present
+    - run: npm run esbuild-base -- --minify
     - run: npm test
