--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
                 },
                 "ProBro.logging.openEdge": {
                     "type": "string",
-                    "markdownDescription": "Specify one or more log entry types (-logentrytypes) for custom OpenEdge part logging."
+                    "markdownDescription": "Specify one or more log entry types (-logentrytypes) for custom OpenEdge part logging. Reload required."
                 }
             }
         },
