removed temp from the middle

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
                     "type": "string",
                     "markdownDescription": "Specify one or more log entry types (-logentrytypes) for custom OpenEdge part logging. Reload required."
                 },
-                "ProBro.temp.tempfiles": {
+                "ProBro.tempfiles": {
                     "type": "string",
                     "markdownDescription": "Specifies path where temporary files are created."
                 }
