--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
                     "default": 100,
                     "markdownDescription": "Specifies maximum time in milliseconds to retrieve batch of records"
                 },
+                "ProBro.batchMinTimeout": {
+                    "type": "number",
+                    "minimum": 10,
+                    "default": 100,
+                    "markdownDescription": "Specifies time in milliseconds to retrieve batch of records"
+                },
                 "ProBro.initialBatchSizeLoad": {
                     "type": "number",
                     "minimum": 50,
