placed startup parameters into temp pf file. Added catch block to handle error, when port is not specified

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
                             },
             
                     "default": [23456],
-                    "markdownDescription": "Provide free ports for local ProBro communication. Additional ports are used for additional vsCode instances using ProBro extension. The default ProBro extension port is 23456"
+                    "markdownDescription": "(Restart needed)\n\n Provide free ports for local ProBro communication. Additional ports are used for additional vsCode instances using ProBro extension.  \n\n The default ProBro extension port is 23456"
                 },
                 "ProBro.tempfiles": {
                     "type": "string",
