change outfile too extension

--- a/package.json
+++ b/package.json
@@ -68,13 +68,14 @@
                     "type": "array",
                     "minItems": 1,
                     "items": {
-                                "type": "number",
-                                "minimum": 0,
-                                "maximum": 65536,
-                                "description": "Port number"
-                            },
-            
-                    "default": [23456],
+                        "type": "number",
+                        "minimum": 0,
+                        "maximum": 65536,
+                        "description": "Port number"
+                    },
+                    "default": [
+                        23456
+                    ],
                     "markdownDescription": "(Restart needed)\n\n Provide free ports for local ProBro communication. Additional ports are used for additional vsCode instances using ProBro extension.  \n\n The default ProBro extension port is 23456"
                 },
                 "ProBro.tempfiles": {
@@ -225,7 +226,7 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run esbuild-base -- --minify",
-        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
         "esbuild": "npm run esbuild-base -- --sourcemap",
         "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
         "test-compile": "tsc -p ./",
