Auto docker startup on debug.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
 			],
-			"preLaunchTask": "${defaultBuildTask}"
+			"preLaunchTask": "Docker: Start and Watch",
+			"postDebugTask": "Docker: Stop"
 		},
 		{
 			"name": "Extension Tests",
