Revert "Auto docker startup on debug."
This reverts commit fd1e605292e44ed108421153a1d79586e0de192f.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,7 @@
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
 			],
-			"preLaunchTask": "Docker: Start and Watch",
-			"postDebugTask": "Docker: Stop"
+			"preLaunchTask": "${defaultBuildTask}"
 		},
 		{
 			"name": "Extension Tests",
