--- a/package.json
+++ b/package.json
@@ -288,6 +288,7 @@
         "react-markdown": "^8.0.7",
         "react-table": "^7.8.0",
         "reactjs-popup": "^2.0.5",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "vsce": "^2.15.0"
     }
 }
