Enable default watch

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "Default watch",
 			"type": "npm",
 			"script": "watch",
 			"problemMatcher": "$tsc-watch",
@@ -17,7 +18,7 @@
 			}
 		},
 		{
-			"label": "Docker: Start and Watch",
+			"label": "Docker: Start",
 			"type": "shell",
 			"command": "docker-compose -f ${workspaceFolder}/docker/docker-compose.yml up",
 			"group": {
@@ -59,6 +60,13 @@
 				"reveal": "never"
 			},
 			"problemMatcher": []
+		},
+		{
+			"label": "Build and watch",
+			"dependsOn": [
+				"Default watch",
+				"Docker: Start"
+			]
 		}
 	]
 }
