--- a/package.json
+++ b/package.json
@@ -106,6 +106,11 @@
                 "ProBro.logging.openEdge": {
                     "type": "string",
                     "markdownDescription": "Specify one or more log entry types (-logentrytypes) for custom OpenEdge part logging. Reload required."
+                },
+                "ProBro.development.useNewDbClient": {
+                    "type": "boolean",
+                    "default": "true",
+                    "markdownDescription": "Use New DB Client implementation"
                 }
             }
         },
