add second docker db

--- a/docker/.env
+++ b/docker/.env
@@ -5,5 +5,10 @@ DB_MIN_PORT=28020 # Port range must not include ports defined in /etc/services/
 DB_MAX_PORT=28050
 IMAGE_NAME_126=gitlab.baltic-amadeus.lt:5005/progress/progress-docker/progress-build:12.6.0-centos
 
+DB_NAME2=sports20201
+DB_PORT2=30001
+DB_MIN_PORT2=28051 # Port range must not include ports defined in /etc/services/
+DB_MAX_PORT2=28080
+
 # Other Configuration Section
 PROGRESS_BASE_IMAGE=gitlab.baltic-amadeus.lt:5005/progress/progress-docker/progress-build:12.6.0-centos
