--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:16
+      working_directory: ./src
     steps:
       - checkout
       - run:
